subida de pagina

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                 <div class="swiper-slide slide" style="background: url(img/slider.png) no-repeat;">
                     <div class="content">
-                        <p class="p-logo">LOGO</p>
+                        <!-- <p class="p-logo">LOGO</p> -->
                         <h3>MASTERBUILD</h3>
                         <hr>
                         <p>Un mundo que avanza, necesita proyectos con futuro</p>
