subida de pagina

--- a/index.html
+++ b/index.html
@@ -131,6 +131,45 @@
 
     </section>
     <!--final slider-->
+
+    <!-- inicio sobre nosotros -->
+    <section class="container-sobre-nosotros">
+        <div class="sobre-nosotros-fondo">
+            <div class="sobre-nosotros">
+                <figure>
+                    <img src="img/slider.png" alt="">
+                </figure>
+                <div class="quienes-somos">
+                    <p class="titulo-quienes-somos">¿Quiénes somos?</p>
+                    <hr>
+                    <p class="texto-quienes-somos">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus aliquam doloribus facere, harum perferendis pariatur voluptas, dignissimos quibusdam obcaecati suscipit eius? Dolores veritatis consequuntur nesciunt quasi, velit praesentium quis harum maiores, voluptatum deserunt et veniam consequatur assumenda nemo ipsa doloremque? At tempora animi beatae iusto inventore aliquam velit minus vitae incidunt voluptates asperiores, corrupti ipsa quasi libero laborum voluptatibus non deleniti nemo laboriosam expedita cum commodi. Minima rem temporibus accusantium delectus itaque et beatae quisquam qui reprehenderit, perferendis laboriosam molestias vel porro! Suscipit dignissimos quae porro adipisci hic eius magnam a nemo molestiae temporibus aspernatur assumenda, fugiat, voluptate, incidunt sunt.
+                    </p>
+                    <div class="ver-mas">
+                        <a href="">Ver más</a>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="sobre-nosotros">
+                <div class="quienes-somos">
+                    <p class="titulo-quienes-somos">¿Por qué elegirnos?</p>
+                    <hr>
+                    <p class="texto-quienes-somos">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus aliquam doloribus facere, harum perferendis pariatur voluptas, dignissimos quibusdam obcaecati suscipit eius? Dolores veritatis consequuntur nesciunt quasi, velit praesentium quis harum maiores, voluptatum deserunt et veniam consequatur assumenda nemo ipsa doloremque? At tempora animi beatae iusto inventore aliquam velit minus vitae incidunt voluptates asperiores, corrupti ipsa quasi libero laborum voluptatibus non deleniti nemo laboriosam expedita cum commodi. Minima rem temporibus accusantium delectus itaque et beatae quisquam qui reprehenderit, perferendis laboriosam molestias vel porro! Suscipit dignissimos quae porro adipisci hic eius magnam a nemo molestiae temporibus aspernatur assumenda, fugiat, voluptate, incidunt sunt.
+                    </p>
+                    <div class="ver-mas">
+                        <a href="">Ver más</a>
+                    </div>
+                </div>
+                <figure>
+                    <img src="img/slider.png" alt="">
+                </figure>
+            </div>
+        </div>
+    </section>
+    <!-- final sobre nosotros -->
     
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
