subida de pagina

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Constructora</title>
+    <title>MasterBuild</title>
 
     <!-- animaciones css  -->
     <link rel="stylesheet"
@@ -135,7 +135,7 @@
     <!-- inicio sobre nosotros -->
     <section class="container-sobre-nosotros">
         <div class="sobre-nosotros-fondo">
-            <div class="sobre-nosotros">
+            <div class="sobre-nosotros scroll-left">
                 <figure>
                     <img src="img/slider.png" alt="">
                 </figure>
@@ -150,9 +150,9 @@
                     </div>
                 </div>
             </div>
+            
 
-
-            <div class="sobre-nosotros">
+            <div class="sobre-nosotros scroll-right">
                 <div class="quienes-somos">
                     <p class="titulo-quienes-somos">¿Por qué elegirnos?</p>
                     <hr>
@@ -171,7 +171,8 @@
     </section>
     <!-- final sobre nosotros -->
     
-
+    <script src="js/scrollreveal.js"></script>
+    <script src="js/scroll.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
