subida de pagina

--- a/index.html
+++ b/index.html
@@ -173,9 +173,49 @@
     <!-- final sobre nosotros -->
 
     <!-- inicio nuestos servicios -->
-    <section>
-        <h1>servicios</h1>
-    </section>
+    <div class="card-container">
+        <div class="card">
+            <img src="img/planta-de-energia.png" class="iconos" alt="">
+            <h2>Ingeniería eléctrica</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, aspernatur. Temporibus voluptatem dolores quidem, praesentium dolorem corrupti perspiciatis aspernatur autem laboriosam odio quas sapiente sequi voluptates? Praesentium quam explicabo, nihil at quod, quis sed doloremque aliquam atque delectus, quaerat incidunt. Deserunt sunt amet porro debitis modi, facilis commodi, aliquid architecto ullam aspernatur laboriosam, quam in laudantium accusantium cupiditate? Amet, modi.</p>
+            <button class="read-more">Leer más</button>
+        </div>
+        <div class="card">
+            <img src="img/residencial.png" class="iconos" alt="">
+            <h2>Construcción residencial</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, aspernatur. Temporibus voluptatem dolores quidem, praesentium dolorem corrupti perspiciatis aspernatur autem laboriosam odio quas sapiente sequi voluptates? Praesentium quam explicabo, nihil at quod, quis sed doloremque aliquam atque delectus, quaerat incidunt. Deserunt sunt amet porro debitis modi, facilis commodi, aliquid architecto ullam aspernatur laboriosam, quam in laudantium accusantium cupiditate? Amet, modi.</p>
+            <button class="read-more">Leer más</button>
+        </div>
+        <div class="card">
+            <img src="img/centro-comercial.png" class="iconos" alt="">
+            <h2>Construcción comercial</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, aspernatur. Temporibus voluptatem dolores quidem, praesentium dolorem corrupti perspiciatis aspernatur autem laboriosam odio quas sapiente sequi um quam explicabo, nihil at quod, quis sed doloremque aliquam atque delectus, quaerat laboriosam, quam in laudantium accusantium cupiditate? Amet, modi.</p>
+            <button class="read-more">Leer más</button>
+        </div>
+    </div>
+    <div class="arrow" id="showMore">▼</div>
+    <div class="hidden-cards card-container" id="hiddenCards">
+        <div class="card">
+            <img src="img/grua.png" class="iconos" alt="">
+            <h2>construcción de obras públicas</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, id. Quibusdam deleniti laboriosam repudiandae illo nisi delectus nemo quisquam laborum obcaecati illum natus ipsum itaque at excepturi ipsam, deserunt officiis, labore hic veritatis! Voluptatibus iste sit, sapiente corporis assumenda vel ea consectetur, enim nesciunt eveniet quidem mollitia aspernatur doloremque ducimus.</p>
+            <button class="read-more">Leer más</button>
+        </div>
+        <div class="card">
+            <img src="img/ingeniero.png" class="iconos" alt="">
+            <h2>Ingeniería civíl</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, id. Quibusdam deleniti laboriosam repudiandae illo nisi delectus nemo quisquam laborum obcaecati illum natus ipsum itaque at excepturi ipsam, deserunt officiis, labore hic veritatis! Voluptatibus iste sit, sapiente corporis assumenda vel ea consectetur, enim nesciunt eveniet quidem mollitia aspernatur doloremque ducimus.</p>
+            <button class="read-more">Leer más</button>
+        </div>
+        <div class="card">
+            <img src="img/demolicion.png" class="iconos" alt="">
+            <h2>Servicios de demolicón</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, id. Quibusdam deleniti laboriosam repudiandae illo nisi delectus nemo quisquam laborum obcaecati illum natus ipsum itaque at excepturi ipsam, deserunt officiis, labore hic veritatis! Voluptatibus iste sit, sapiente corporis assumenda vel ea consectetur, enim nesciunt eveniet quidem mollitia aspernatur doloremque ducimus.</p>
+            <button class="read-more">Leer más</button>
+        </div>
+    </div>
+
+    <!-- inicio final servicios -->
     
     
     <script src="js/scrollreveal.js"></script>
