subida de pagina

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <button class="read-more">Leer más</button>
         </div>
     </div>
-    <div class="arrow" id="showMore">▼</div>
+    <div class="arrow" id="showMore">Ver más ▼</div>
     <div class="hidden-cards card-container" id="hiddenCards">
         <div class="card">
             <img src="img/grua.png" class="iconos" alt="">
