--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </div>
             <div class="texticos">
                 <span>+<p id="counter3">0</p></span>
-                <p>Proyectos internacionales</p>
+                <p>Maquinería</p>
             </div>
         </div>
     </div>
