subida de pagina

--- a/index.html
+++ b/index.html
@@ -225,10 +225,18 @@
     <div class="fondo-azul">
         <img src="img/fondo-azul.jpg" alt="">
         <div class="textos">
-            <p>+369 <br> Clientes felices</p>
-            <p>+63 <br> Proyectos</p>
-            <p>+36 <br> Proyectos internacionales</p>
-            
+            <div class="texticos">
+                <span>+<p id="counter1">0</p></span>
+                <p>Clientes felices</p>
+            </div>
+            <div class="texticos">
+                <span>+<p id="counter2">0</p></span>
+                <p>Proyectos</p>
+            </div>
+            <div class="texticos">
+                <span>+<p id="counter3">0</p></span>
+                <p>Proyectos internacionales</p>
+            </div>
         </div>
     </div>
     
