subida de pagina

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <!-- inicio sobre nosotros -->
     <section class="container-sobre-nosotros" id="nosotros">
         <div class="sobre-nosotros-fondo">
-            <div class="sobre-nosotros scroll-left">
+            <div class="sobre-nosotros scroll-top">
                 <figure>
                     <img src="img/slider.png" alt="">
                 </figure>
@@ -152,7 +152,7 @@
             </div>
             
 
-            <div class="sobre-nosotros scroll-right">
+            <div class="sobre-nosotros scroll-top">
                 <div class="quienes-somos">
                     <p class="titulo-quienes-somos">¿Por qué elegirnos?</p>
                     <hr>
