--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <hr>
     </div>
     <div class="card-container">
-        <div class="card scroll-left">
+        <div class="card scroll-right">
             <img src="img/planta-de-energia.png" class="iconos" alt="">
             <h2>Ingeniería eléctrica</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, aspernatur. Temporibus voluptatem dolores quidem, praesentium dolorem corrupti perspiciatis aspernatur autem laboriosam odio quas sapiente sequi voluptates? Praesentium quam explicabo, nihil at quod, quis sed doloremque aliquam atque delectus, quaerat incidunt. Deserunt sunt amet porro debitis modi, facilis commodi, aliquid architecto ullam aspernatur laboriosam, quam in laudantium accusantium cupiditate? Amet, modi.</p>
@@ -191,7 +191,7 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, aspernatur. Temporibus voluptatem dolores quidem, praesentium dolorem corrupti perspiciatis aspernatur autem laboriosam odio quas sapiente sequi voluptates? Praesentium quam explicabo, nihil at quod, quis sed doloremque aliquam atque delectus, quaerat incidunt. Deserunt sunt amet porro debitis modi, facilis commodi, aliquid architecto ullam aspernatur laboriosam, quam in laudantium accusantium cupiditate? Amet, modi.</p>
             <button class="read-more">Leer más</button>
         </div>
-        <div class="card scroll-left">
+        <div class="card scroll-right">
             <img src="img/centro-comercial.png" class="iconos" alt="">
             <h2>Construcción comercial</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, aspernatur. Temporibus voluptatem dolores quidem, praesentium dolorem corrupti perspiciatis aspernatur autem laboriosam odio quas sapiente sequi um quam explicabo, nihil at quod, quis sed doloremque aliquam atque delectus, quaerat laboriosam, quam in laudantium accusantium cupiditate? Amet, modi.</p>
