subida de pagina

--- a/index.html
+++ b/index.html
@@ -200,19 +200,19 @@
     </div>
     <div class="arrow" id="showMore">Ver más ▼</div>
     <div class="hidden-cards card-container" id="hiddenCards">
-        <div class="card scroll-right">
+        <div class="card">
             <img src="img/grua.png" class="iconos" alt="">
             <h2>construcción de obras públicas</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, id. Quibusdam deleniti laboriosam repudiandae illo nisi delectus nemo quisquam laborum obcaecati illum natus ipsum itaque at excepturi ipsam, deserunt officiis, labore hic veritatis! Voluptatibus iste sit, sapiente corporis assumenda vel ea consectetur, enim nesciunt eveniet quidem mollitia aspernatur doloremque ducimus.</p>
             <button class="read-more">Leer más</button>
         </div>
-        <div class="card scroll-right">
+        <div class="card">
             <img src="img/ingeniero.png" class="iconos" alt="">
             <h2>Ingeniería civíl</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, id. Quibusdam deleniti laboriosam repudiandae illo nisi delectus nemo quisquam laborum obcaecati illum natus ipsum itaque at excepturi ipsam, deserunt officiis, labore hic veritatis! Voluptatibus iste sit, sapiente corporis assumenda vel ea consectetur, enim nesciunt eveniet quidem mollitia aspernatur doloremque ducimus.</p>
             <button class="read-more">Leer más</button>
         </div>
-        <div class="card scroll-right">
+        <div class="card">
             <img src="img/demolicion.png" class="iconos" alt="">
             <h2>Servicios de demolicón</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, id. Quibusdam deleniti laboriosam repudiandae illo nisi delectus nemo quisquam laborum obcaecati illum natus ipsum itaque at excepturi ipsam, deserunt officiis, labore hic veritatis! Voluptatibus iste sit, sapiente corporis assumenda vel ea consectetur, enim nesciunt eveniet quidem mollitia aspernatur doloremque ducimus.</p>
