subida de pagina

--- a/index.html
+++ b/index.html
@@ -248,21 +248,21 @@
 
     <section>
         <div class="container-items">
-            <div class="container">
+            <div class="container scroll-top">
                 <item class="item-container">
                     <img src="img/residenciales.jpg" alt="">
                     <a href="#">Residenciales</a>
                 </item>
             </div>
 
-            <div class="container">
+            <div class="container scroll-top">
                 <item class="item-container">
                     <img src="img/puente.jpg" alt="">
                     <a href="#">Puentes</a>
                 </item>
             </div>
 
-            <div class="container">
+            <div class="container scroll-top">
                 <item class="item-container">
                     <img src="img/universidad.jpg" alt="">
                     <a href="#">Colegios universitarios</a>
@@ -271,7 +271,7 @@
         </div>
 
         <div class="container-items">
-            <div class="container">
+            <div class="container scroll-top">
                 <item class="item-container">
                     <img src="img/residenciales.jpg" alt="">
                     <a href="#">Eléctrica</a>
@@ -279,14 +279,14 @@
             </div>
 
             <div class="container">
-                <item class="item-container">
+                <item class="item-container scroll-top">
                     <img src="img/puente.jpg" alt="">
                     <a href="#">Restauración y Renovación:</a>
                 </item>
             </div>
 
             <div class="container">
-                <item class="item-container">
+                <item class="item-container scroll-top">
                     <img src="img/universidad.jpg" alt="">
                     <a href="#">Infraestructura Civil</a>
                 </item>
