subida de pagina

--- a/index.html
+++ b/index.html
@@ -273,21 +273,21 @@
         <div class="container-items">
             <div class="container scroll-top">
                 <item class="item-container">
-                    <img src="img/residenciales.jpg" alt="">
+                    <img src="img/electrica.jpg" alt="">
                     <a href="#">Eléctrica</a>
                 </item>
             </div>
 
             <div class="container">
                 <item class="item-container scroll-top">
-                    <img src="img/puente.jpg" alt="">
+                    <img src="img/restauracion.jpg" alt="">
                     <a href="#">Restauración y Renovación:</a>
                 </item>
             </div>
 
             <div class="container">
                 <item class="item-container scroll-top">
-                    <img src="img/universidad.jpg" alt="">
+                    <img src="img/civil.jpg" alt="">
                     <a href="#">Infraestructura Civil</a>
                 </item>
             </div>
