--- a/index.html
+++ b/index.html
@@ -278,15 +278,15 @@
                 </item>
             </div>
 
-            <div class="container">
-                <item class="item-container scroll-top">
+            <div class="container scroll-top">
+                <item class="item-container">
                     <img src="img/restauracion.jpg" alt="">
                     <a href="#">Restauración y Renovación:</a>
                 </item>
             </div>
 
-            <div class="container">
-                <item class="item-container scroll-top">
+            <div class="container scroll-top">
+                <item class="item-container">
                     <img src="img/civil.jpg" alt="">
                     <a href="#">Infraestructura Civil</a>
                 </item>
