subida de pagina

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <img src="img/planta-de-energia.png" class="iconos" alt="">
             <h2>Ingeniería eléctrica</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, aspernatur. Temporibus voluptatem dolores quidem, praesentium dolorem corrupti perspiciatis aspernatur autem laboriosam odio quas sapiente sequi voluptates? Praesentium quam explicabo, nihil at quod, quis sed doloremque aliquam atque delectus, quaerat incidunt. Deserunt sunt amet porro debitis modi, facilis commodi, aliquid architecto ullam aspernatur laboriosam, quam in laudantium accusantium cupiditate? Amet, modi.</p>
-            <button class="read-more">Leer más</button>
+            <a href="ingenieria-electrica.html"><button class="read-more">Leer más</button></a>
         </div>
         <div class="card scroll-top">
             <img src="img/residencial.png" class="iconos" alt="">
