subida de pagina

--- a/ingenieria-electrica.html
+++ b/ingenieria-electrica.html
@@ -90,13 +90,13 @@
     <!-- inicio video -->
     <div class="video-container">
         <video autoplay muted loop>
-            <source src="img/video.mp4" type="video/mp4">
+            <source src="img/video2.mp4" type="video/mp4">
             Tu navegador no admite la reproducción de videos HTML5.
         </video>
-        <div class="texto-overlay">
+        <!-- <div class="texto-overlay">
             <h2>Ingeniería eléctrica</h2>
             <hr>
-        </div>
+        </div> -->
     </div>
     <!-- final video -->
     
