subida de pagina

--- a/ingenieria-electrica.html
+++ b/ingenieria-electrica.html
@@ -99,6 +99,22 @@
         </div> -->
     </div>
     <!-- final video -->
+
+    <!-- inicio imagen texto -->
+    <section>
+        <div class="container-img-texto">
+            <div class="items-img-texto">
+                <figure>
+                    <img src="img/electrico.jpg" alt="">
+                </figure>
+                <div class="textos-servicio">
+                    <h2>Título</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore dignissimos, necessitatibus maxime autem unde saepe tempore ipsum quae iusto natus voluptates iure earum excepturi provident quis. Rerum, repudiandae ea quaerat ratione id quod facilis veritatis reprehenderit laudantium accusantium corporis? Non facilis accusamus obcaecati harum esse. Ipsum eaque eligendi tempore deleniti ipsam delectus. Ex esse doloribus delectus aliquam totam ut quam itaque quasi iure voluptatum! Officia obcaecati, ipsum atque explicabo quas aperiam possimus vero corporis mollitia asperiores similique esse dolorum, labore eligendi repudiandae non culpa nemo voluptatem temporibus quasi, dignissimos dolor magni vitae. Cupiditate quis aliquid nisi commodi unde sapiente laudantium quo odit blanditiis velit, id cum eligendi similique, dolorum perspiciatis consectetur quasi saepe libero eos facere? Voluptas, possimus ratione. Adipisci.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- final imagen texto -->
     
 
     <script src="js/scrollreveal.js"></script>
