subida de pagina

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </li>
         
                     <li class="menu__item">
-                        <a href="contactos.html" class="menu__link">Proyectos</a>
+                        <a href="#proyectos" class="menu__link">Proyectos</a>
                     </li>
                     
                     <li class="menu__item">
@@ -237,14 +237,17 @@
                 <span>+<p id="counter3">0</p></span>
                 <p>Proyectos internacionales</p>
             </div>
+            <div id="proyectos"></div>
         </div>
     </div>
 
+   
     <!-- inicio proyectos -->
     <div class="titulo-proyectos">
         <h2>Proyectos</h2>
         <hr>
     </div>  
+
 
     <section>
         <div class="container-items">
