subida de pagina

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </li>
                     
                     <li class="menu__item">
-                        <a href="https://t.me/mimooiecu" target="_blank" class="menu__link">Contactos</a>
+                        <a href="" target="_blank" class="menu__link">Contactos</a>
                     </li>
                 </ul>
     
