subida de pagina

--- a/index.html
+++ b/index.html
@@ -302,13 +302,13 @@
 
      <footer class="footer">
         <div class="container-footer">
-            <div class="sobre-nosotros-footer scroll-left">
+            <div class="sobre-nosotros-footer items-footer scroll-top">
                 <h3>MasterBuild</h3>
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid in, eaque neque laborum voluptatibus assumenda ipsam quia quam velit magnam.</p>
             </div>
 
-            <div class="links-footer scroll-up">
+            <div class="links-footer items-footer scroll-top">
                 <h3>Enlaces</h3>
                 <hr>
                 <a href="#">Inicio</a>
@@ -318,7 +318,7 @@
                 <a href="#">Contactos</a>
             </div>
 
-            <div class="contactos-footer scroll-up">
+            <div class="contactos-footer items-footer scroll-top">
                 <h3>Contactos</h3>
                 <hr>
                 <span><i class='bx bxs-map'></i>20 Avenida Séptima, Chapinero, 10014</span>
